# game-of-cuda

./: CMakeLists.txt  LICENSE  README.md
src/: main.cu
